# private-jets

./: .gitignore  Cargo.toml  LICENSE.md  README.md  analysis.py  analysis.sql  dr.py  expose_analysis.py  frontend.sql  methodology.md  region.sql  run.sh  run_sql.py
.github/workflows/: test.yaml
examples/: cache_state.rs  clean_cache.rs  country.md  country.rs  dk_jets.md  dk_jets.rs  etl_legs.rs  export_legs.rs  export_private_jets.rs  period.rs  single_day.rs  single_day_template.md  template.md
src/: aircraft.rs  aircraft_db.rs  aircraft_models.rs  aircraft_types.rs  aircrafts.csv  aircrafts.rs  airports.rs  consumption.csv  consumption.rs  country.json  country.rs  csv.rs  emissions.rs  emissions_private_jet.rs  fs.rs  fs_azure.rs  fs_s3.rs  icao_to_trace.rs  io.rs  legs.rs  lib.rs  main.rs  model.rs  models.csv  number_to_icao.rs  owners.csv  owners.json  owners.rs  private_emissions.rs  private_jets_in_time.rs  serde.rs  specifications.csv  trace_month.rs  types.csv
tests/it/: main.rs
