[package]
name = "flights"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# process JSON from https
serde_json = { version = "1.0", default_features = false }

# perform requests to the internet
reqwest = {version="*", features = ["gzip"]}

# create random string for cookies
rand = {version="*", default_features = false, features = ["std", "std_rng", "getrandom"]}

# to perform time-based calculations
time = {version="*", default_features = false, features = ["formatting", "parsing", "macros"]}

# compute distances between geo-points
geoutils = {version="*", default_features = false}

# read airport names
csv = {version="*", default_features = false}

# azure integration
azure_storage = "*"
azure_storage_blobs = "*"
azure_core = "*"
futures = "0.3"
bytes = "1.5"
async-recursion = "1.0"

[dev-dependencies]
tinytemplate = "1.1"
clap = { version = "4.4.6", features = ["derive"] }
tokio = {version="1.0", features=["rt", "macros", "rt-multi-thread"]}
