[package]
name = "flights"
version = "0.1.0"
edition = "2021"

[dependencies]
# process JSON from https
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", default_features = false }

# perform requests to the internet
reqwest = {version="*", features = ["gzip"]}
reqwest-retry = "*"
reqwest-middleware = "*"

# create random string for cookies
rand = {version="*", default_features = false, features = ["std", "std_rng", "getrandom"]}

# to perform time-based calculations
time = {version="*", default_features = false, features = ["formatting", "parsing", "macros"]}

# compute distances between geo-points
geoutils = {version="*", default_features = false}

# read airport names
csv = {version="*", default_features = false}

# async utilities
async-trait = "*"
async-recursion = "1.0"
futures = "0.3"

# logging
log = "*"

# azure integration
azure_storage = "*"
azure_storage_blobs = "*"
azure_core = "*"
bytes = "1.5"

[dev-dependencies]
tinytemplate = "1.1"
clap = { version = "4.4.6", features = ["derive"] }
tokio = {version="1.0", features=["rt", "macros", "rt-multi-thread"]}
simple_logger = "*"
num-format = "*"
itertools = "*"
