[package]
name = "flights"
version = "0.1.0"
edition = "2021"

[dependencies]
# process JSON from https
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["std"], default_features = false }

# perform requests to the internet
reqwest = {version="0.12", features = ["gzip"]}
reqwest-retry = "0.5.0"
reqwest-middleware = "0.3.0"

# create random string for cookies
rand = {version="*", default_features = false, features = ["std", "std_rng", "getrandom"]}

# to perform time-based calculations
time = {version="*", default_features = false, features = ["formatting", "parsing", "macros", "serde", "serde-well-known"]}

# compute distances between geo-points
geoutils = {version="*", default_features = false}

# read airport names
csv = {version="*", default_features = false}

# async utilities
async-trait = "*"
async-recursion = "1.0"
futures = "0.3"

# logging
log = "*"

# S3 integration
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "*"
aws-credential-types = "*"

itertools = { version = "*" }

clap = { version = "4.4.6", features = ["derive"], optional = true }
tokio = { version="1.0", features=["rt", "macros", "rt-multi-thread"], optional = true }
simple_logger = { version = "*", optional = true }

[dev-dependencies]
tokio = {version="1.0", features=["rt", "macros", "rt-multi-thread"]}

[features]
build-binary = [
    "clap",
    "tokio",
    "simple_logger",
]

[[bin]]
name = "etl_legs"
required-features = ["build-binary"]

[[bin]]
name = "etl_positions"
required-features = ["build-binary"]

[[bin]]
name = "etl_aircrafts"
required-features = ["build-binary"]
